Finish all good test scripts, change test class naming.

--- a/seng301-asgn3.vstudio/UnitTestProject1/UnitTestProject1.csproj
+++ b/seng301-asgn3.vstudio/UnitTestProject1/UnitTestProject1.csproj
@@ -50,8 +50,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="GoodTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BadTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\seng301-asgn3\seng301-asgn3.csproj">
