--- a/seng301-asgn3.vstudio/UnitTestProject1/UnitTestProject1.csproj
+++ b/seng301-asgn3.vstudio/UnitTestProject1/UnitTestProject1.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="GoodTests.cs" />
+    <Compile Include="HelperMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BadTests.cs" />
   </ItemGroup>
