Add bonus test class with three bonus test scripts taken from personal solution to assignment 2.

--- a/seng301-asgn3.vstudio/UnitTestProject1/UnitTestProject1.csproj
+++ b/seng301-asgn3.vstudio/UnitTestProject1/UnitTestProject1.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BonusTests.cs" />
     <Compile Include="GoodTests.cs" />
     <Compile Include="HelperMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
